--- a/src/pages/chart/chart.module.css
+++ b/src/pages/chart/chart.module.css
@@ -6,6 +6,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 
+
 }
 .chat_window{
     gap: 50px;
@@ -13,8 +14,6 @@ justify-content: center;
 .light{
     background-color: black;
     color: #fff;
-    height: 100vh;
-    max-height: 100%;
 }
 
 .fistcol{
@@ -173,12 +172,14 @@ justify-content: center;
     border-radius: 5px;
     color: #fff;
 }
-@media screen and (max-width:850px){
+@media screen and (max-width:576px){
 
     .light{
-        
-        height: 100%;
+        /* height: 100%; */
         /* max-height: 100%; */
+    }
+    .container{
+        height: 100%;
     }
 
 
